src/app/css/styles.css
/* Variables */
:root {
  --color-primary: #487779;
  --color-secondary: #024883;
  --color-blue: royalblue;
  --color-red: rgb(113 2 2);
  --color-B: rgb(2, 45, 49);
  --color-W: rgb(248, 252, 252);
  --color-gold: #8c7f46;
  --color-light-grey: rgb(219, 235, 235);
  --color-grey: rgb(102, 124, 124);
  /* Variables cannot be used as @media query args */
  --w-iPhone: 390px;
  --w-iPad: 810px;
  --w-FullHD: 1920px;
  --h-FullHD: 1080px;
  --w-2K: 2560px;
  --img-mobile: 358px;
  --img-tablet: 377px;
  --img-desktop: 528px;
  --img-TV: 948px;
}

/* Globals */
html {
  box-sizing: border-box;
}

* {
  box-sizing: inherit;
  margin: 0;
  padding: 0;

  &::before,
  &::after {
    box-sizing: inherit;
  }
}

:where(body > header > div, body > nav, main) {
  margin: 0 auto;
  max-width: 810px;

  @media only screen and (min-width: 2560px) {
    max-width: var(--h-FullHD);
  }
}

:where(body > header, body > nav, footer) {
  background-color: var(--color-light-grey);
}

body {
  /* vs. scrollbar-y affecting viewport width */
  min-width: 100vw;
  overflow-x: hidden;
  font-family: Helvetica, Arial, sans-serif;
  color: var(--color-B);
  background-color: var(--color-W);
}

h1 {
  margin-bottom: 1.5rem;
  color: var(--color-primary);
  font-family: Georgia, "Times New Roman", Times, serif;
  letter-spacing: 0.2rem;
  text-transform: uppercase;
  text-align: center;
}

h1 {
  font-weight: lighter;
  font-size: medium;

  @media screen and (min-width: 810px) {
    font-size: x-large;
  }

  @media screen and (min-width: 1920px) {
    font-size: xx-large;
  }

  @media screen and (min-width: 2560px) {
    font-size: 3rem;
  }
}

h2 {
  color: var(--color-gold);
  font-weight: lighter;
  margin-bottom: 0.2rem;
  font-size: large;

  @media screen and (min-width: 810px) {
    margin-bottom: 0.5rem;
    font-size: x-large;
  }

  @media screen and (min-width: 1920px) {
    margin-bottom: 0.8rem;
  }

  @media screen and (min-width: 2560px) {
    margin-bottom: 1rem;
    font-size: xx-large;
  }
}

:where(p, .p) {
  margin-bottom: 1rem;
  font-size: small;
  line-height: 1.5;

  @media screen and (min-width: 810px) {
    line-height: 1.5;
    font-size: medium;
  }

  @media screen and (min-width: 1920px) {
    font-size: large;
  }

  @media screen and (min-width: 2560px) {
    font-size: x-large;
  }
}

:is(ul, ol) {
  list-style: none;
}

[href] {
  color: var(--color-B);
  text-decoration: none;

  &:focus,
  &:hover {
    color: var(--color-red);
  }

  &:active {
    color: var(--color-secondary);
  }
}

.active {
  color: var(--color-red);
}

/* COMPO - header */
body > header {
  font-size: x-large;
  color: var(--color-primary);
  border: 1px solid var(--color-primary);

  @media screen and (min-width: 811px) {
    box-shadow: 0px 3px 10px -4px var(--color-primary);
    border-radius: 0 0 5px 5px;
  }

  > div {
    display: flex;
    align-items: center;
    justify-content: center;

    img {
      margin: 0.5rem 1.2rem;
      border-radius: 20%;
      border: 1px solid var(--color-primary);
    }

    span {
      @media screen and (min-width: 810px) {
        font-size: 3rem;
      }

      @media screen and (min-width: 1920px) {
        font-size: 3.5rem;
      }

      @media screen and (min-width: 2560px) {
        font-size: 4rem;
      }
    }
  }
}

/* COMPO - nav(s) */
body > nav {
  user-select: none;
  border: 1px solid var(--color-primary);
  border-width: 0 0 1px 1px;
  border-radius: 0 0 5px 5px;
  box-shadow: 0px 3px 10px -4px var(--color-primary);

  > :where(ol, ul) {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    font-size: smaller;

    @media screen and (min-width: 810px) {
      font-size: medium;
    }

    @media screen and (min-width: 1920px) {
      font-size: large;
    }

    @media screen and (min-width: 2560px) {
      font-size: x-large;
    }
  }

  > ol > li {
    margin: 0.5rem 1rem;
  }

  > ul {
    justify-content: left;

    > li {
      margin: 0 1rem 0.5rem;

      > [href] {
        color: var(--color-secondary);
      }
    }
  }

  &:nth-of-type(2) {
    p {
      padding-top: 0.5rem;
      padding-left: 1rem;
      font-style: italic;
      color: var(--color-red);
    }
  }
}

@keyframes topmenu-travel-bot-nav1 {
  0% {
    border-radius: 0;
  }

  100% {
    border-radius: 0;
  }
}

@keyframes topmenu-travel-bot-nav2 {
  0% {
    transform: translate(0, -100px);
    z-index: -1;
    box-shadow: none;
  }

  95% {
    transform: translate(0, 0);
    box-shadow: none;
    z-index: -1;
  }

  100% {
    transform: translate(0, 0);
    box-shadow: 0px 3px 10px -4px var(--color-B);
    z-index: 0;
  }
}

body[class^="pag-article"] > nav {
  animation-duration: 0.9s;
  transition-timing-function: ease-out;
  animation-fill-mode: forwards;
}

body[class^="pag-article"] > nav:nth-of-type(1) {
  animation-name: topmenu-travel-bot-nav1;
}

body[class^="pag-article"] > nav:nth-of-type(2) {
  position: relative;
  animation-name: topmenu-travel-bot-nav2;
}
/* ... */

